Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55762

Windows 10: QWidget move() method does not take account the slim borders of Windows 10

XMLWordPrintable

    • ec97be5585fd7721db6ba2bb9ea0591fa5ca30b7

      Windows 10 border sizes are notably thinner than in previous Windows. move() method of QWidget does not take this in account when it is repositioning. This leads to a problem where move(0, 0) does not position a window in top-left corner, and leaves about 7 pixel wide space between screen left side and where the window border starts.

      Steps to reproduce:

      • Run attached sample
      • Press "move(0, 0)" button
      • EXPECTED: Window is moved to so that it fills the screen from 0, 0 position
      • ACTUAL: Window is moved so, that it fills the screen from 8, 0 position, leaving a 7 pixel gap

      Not reproducible with Windows 7 where the borders are wider.

        1. qtbug55762.zip
          2 kB
        2. qtbug55762.zip
          0.7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anrocha André De La Rocha (Inactive)
            jussi_witick Jussi Witick
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes